--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,104 @@
 .App {
   text-align: center;
+  margin-top: 20px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.join-block {
+  margin: 0 auto;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  width: 300px;
 }
 
-.App-link {
-  color: #61dafb;
+.join-block input {
+  margin-bottom: 15px;
+  border: 1px solid green;
+  padding: 5px;
+  border-radius: 5px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.join-block button {
+  background-color: green;
+  border-radius: 5px;
+  border: none;
+  padding: 5px;
+}
+
+.join-block button:hover {
+  cursor: pointer;
+}
+
+.chat {
+  display: flex;
+  margin-top: 20px;
+  border: 1px solid rgb(162, 162, 162);
+  width: 60%;
+  margin: 0 auto;
+  border-radius: 6px;
+}
+
+.chat_left {
+  width: 20%;
+  text-align: start;
+  padding: 25px 15px;
+  background-color: rgb(226, 226, 226, 0.4);
+}
+
+.chat_right {
+  padding-left: 50px;
+  padding: 25px 15px;
+  width: 80%;
+}
+
+.chat_left_amount {
+  margin-bottom: 20px;
+  font-weight: 600;
+}
+
+.message_wrapper {
+  margin-bottom: 25px;
+  text-align: start;
+}
+
+.message_text {
+  background-color: blueviolet;
+  color: #fff;
+  padding: 7px 12px;
+  border-radius: 5px;
+  width: fit-content;
+}
+
+.message_who {
+  font-size: 13px;
+  color: rgb(85, 85, 85);
+}
+
+.chat_left_user {
+  background-color: #fff;
+  padding: 7px 12px;
+  border: 1px solid rgb(212, 212, 212);
+  border-radius: 5px;
+}
+
+.message_input_wrapper {
+  margin-top: 100px;
+  width: 100%;
+  text-align: start;
+}
+
+textarea {
+  padding: 7px 20px;
+  width: calc(100% - 45px);
+  margin-top: 15px;
+  height: 70px;
+}
+
+.message_send {
+  background-color: blue;
+  color: #fff;
+  border-radius: 5px;
+  padding: 5px 10px;
+  margin-top: 15px;
+  display: inline-block
+  
 }
