--- a/src/App.css
+++ b/src/App.css
@@ -99,6 +99,6 @@ textarea {
   border-radius: 5px;
   padding: 5px 10px;
   margin-top: 15px;
-  display: inline-block
-  
+  display: inline-block;
+  cursor: pointer;
 }
